[gd_scene load_steps=3 format=3 uid="uid://dk41qchik8f17"]

[ext_resource type="Script" path="res://gui.gd" id="1_1823o"]

[sub_resource type="LabelSettings" id="LabelSettings_4r4rt"]
shadow_size = 9

[node name="GUI" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_1823o")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
follow_viewport_enabled = true

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -65.0
offset_top = -37.0
offset_right = 12.0
offset_bottom = 21.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(2, 2)

[node name="Game Name" type="Label" parent="CanvasLayer/VBoxContainer"]
texture_filter = 1
layout_mode = 2
text = "The Juicer"
label_settings = SubResource("LabelSettings_4r4rt")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Start_Button" type="Button" parent="CanvasLayer/VBoxContainer"]
visibility_layer = 2
layout_mode = 2
theme_override_colors/font_hover_color = Color(0.393491, 0.910825, 1, 1)
action_mode = 0
text = "start"
metadata/_edit_use_anchors_ = true

[node name="endless" type="Button" parent="CanvasLayer/VBoxContainer"]
visibility_layer = 2
layout_mode = 2
theme_override_colors/font_hover_color = Color(0, 1, 0.121569, 1)
theme_override_colors/icon_normal_color = Color(1, 0, 0, 1)
action_mode = 0
text = "endless"
metadata/_edit_use_anchors_ = true

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer"]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -105.0
offset_right = -12.0
offset_bottom = 40.0
grow_horizontal = 0
alignment = 2

[node name="Time Limit" type="Label" parent="CanvasLayer/HBoxContainer2"]
layout_mode = 2
text = "placeholder"
horizontal_alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer"]
offset_left = 13.0
offset_right = 140.0
offset_bottom = 40.0

[node name="Score" type="Label" parent="CanvasLayer/HBoxContainer"]
modulate = Color(0, 0, 0, 1)
layout_mode = 2
text = "placeholder text"

[node name="Time Limit Timer" type="Timer" parent="."]
wait_time = 120.0

[connection signal="pressed" from="CanvasLayer/VBoxContainer/Start_Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/VBoxContainer/endless" to="." method="_on_endless_pressed"]
[connection signal="timeout" from="Time Limit Timer" to="." method="_on_timer_timeout"]
